# Dilcore-AI-Core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  appsettings.json  langgraph-improvements.json  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_azure_log.py  test_logs.py
.agents/rules/: architecture.md
.github/actions/git-version-manager/: action.yml
.github/workflows/: build-container-app-v1.yml  build-container-app.yml  cd.yml  ci.yml  deploy-container-app-v1.yml  deploy-container-app.yml
TestResults/: coverage.xml  junit.xml
app/core/: context.py  telemetry.py
data/vector_store/data_index/: index.faiss  index.pkl
data/vector_store/metadata_index/: index.faiss  index.pkl
scripts/: check.sh  connect.sh
src/: container.py  main.py
src/agents/: __init__.py  container.py
src/agents/blueprints/: __init__.py  constants.py  graph.py  models.py  prompts.py  runtime.py  state.py
src/agents/blueprints/nodes/: __init__.py  generate.py  identify_intent.py  retrieve.py  supervisor.py
src/agents/blueprints/sub_agents/: middleware.py  react_agent_node.py  shared_preamble.py  tool_factory.py
src/agents/blueprints/sub_agents/ask/: __init__.py  graph.py  prompts.py
src/agents/blueprints/sub_agents/ask/nodes/: __init__.py  ask_agent.py
src/agents/blueprints/sub_agents/ask/tools/: __init__.py  blueprint_info.py
src/agents/blueprints/sub_agents/design/: __init__.py  graph.py  prompts.py
src/agents/blueprints/sub_agents/design/nodes/: __init__.py  design_agent.py  update_design_context.py
src/agents/blueprints/sub_agents/generate/: __init__.py  graph.py  prompts.py
src/agents/blueprints/sub_agents/generate/nodes/: __init__.py  build_plan.py  collect_user_response.py  handle_response.py  present_plan.py  write_success.py
src/agents/blueprints/sub_agents/generate/tools/: __init__.py  agent_rules_info.py  entity_api_reference.py  field_api_reference.py
src/agents/blueprints/sub_agents/persona/: __init__.py  graph.py
src/agents/blueprints/sub_agents/persona/nodes/: __init__.py  resolve.py
src/agents/blueprints/sub_agents/persona/tools/: __init__.py
src/agents/blueprints/sub_agents/shared/tools/: __init__.py  common_blueprint_info.py  entity_info.py  field_info.py
src/agents/blueprints/tools/: __init__.py  vector_search.py
src/ai_agent/: __init__.py  exceptions.py  main.py
src/ai_agent/agent/: __init__.py  base.py  core.py  persona.py  persona_prompts.py  prompts.py  registry.py  streaming.py
src/ai_agent/api/: __init__.py  dependencies.py  exception_handlers.py  module_builder_routes.py  persona_routes.py  routes.py  streaming_routes.py
src/ai_agent/config/: settings.py
src/ai_agent/middleware/: __init__.py  exception_handler.py
src/ai_agent/schemas/: __init__.py  errors.py  persona.py  problem_details.py  request.py  response.py  streaming.py
src/api/: __init__.py  openapi.py
src/api/controllers/: __init__.py  auth_dependencies.py  blueprints.py  dependencies.py  health.py  persona.py  streaming.py  users.py
src/api/middleware/: __init__.py  exception_handler.py
src/api/schemas/: __init__.py  errors.py  persona.py  response.py  streaming.py  thread.py
src/application/: __init__.py  container.py
src/application/abstractions/: __init__.py  abc_tenant_provider.py  abc_user_context_provider.py  abc_user_id_provider.py  abstract_api_client.py  accesstoken_accessor.py  tenant_provider.py  user_context_resolver.py
src/application/domain/: __init__.py  current_user.py  tenant.py
src/application/services/: __init__.py  blueprints_service.py
src/infrastructure/: __init__.py  auth.py  constants.py  container.py  telemetry.py  tenant_provider.py  user_provider.py
src/infrastructure/checkpoint/: document_checkpointer.py  memory.py  tenant_resolving_checkpointer.py
src/infrastructure/clients/: tenant_api.py
src/infrastructure/config/: azure_appconfig.py
src/infrastructure/http/: __init__.py  http_retry.py  request_context.py  request_context_accessor.py  request_logging.py
src/infrastructure/llm/: __init__.py  client.py
src/infrastructure/messaging/: __init__.py
src/infrastructure/tenants/: __init__.py  current_tenant_provider.py  tenant_request_context.py
src/infrastructure/tracing/: __init__.py  telemetry.py
src/infrastructure/tracing/processors/: __init__.py  log.py  span.py
src/shared/: __init__.py  constants.py  container.py  models.py
src/shared/config/: settings.py
src/shared/exceptions/: __init__.py  base.py
src/shared/streaming/: __init__.py  emitter.py  utils.py
src/shared/utils/: __init__.py  messages.py
src/store/: __init__.py
src/store/cache/: __init__.py
src/store/files/blueprints/: agent-rules.md  common.md  entities-api-reference.md  entities.md  fields-api-reference.md  fields.md
src/store/mongo/: __init__.py
src/store/vector/: __init__.py  faiss_store.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth_openapi.py  test_config.py  test_errors.py  test_problem_details.py  test_streaming.py  test_streaming_utils.py
tests/integration/: conftest.py  test_agent.py
tests/unit/: conftest.py  test_azure_telemetry.py  test_config.py  test_container.py  test_errors.py  test_graph_di_factory.py
tests/unit/agents/blueprints/nodes/: test_identify_intent.py  test_supervisor.py
tests/unit/agents/blueprints/sub_agents/design/nodes/: test_update_design_context.py
tests/unit/agents/blueprints/sub_agents/generate/nodes/: test_collect_user_response.py  test_handle_response.py  test_present_plan.py  test_write_success.py
tests/unit/infrastructure/: test_dependency_fixer.py  test_telemetry.py
