[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent with LangChain and OpenRouter for structured JSON template generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Arsen", email = "arsen@example.com" }
]

dependencies = [
    "fastapi[standard]>=0.115.0",
    "scalar-fastapi==1.6.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatting or unavoidable in prompts)
    "UP045", # Use `X | None` for type annotations (breaks Pydantic on Python < 3.10)
]
